toevoegen van uitleg over trainingsproces

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -297,4 +297,14 @@
   urldate = {2025-05-01},
 }
 
+@Misc{Park2021,
+  author    = {Park, Tae Jin and Kanda, Naoyuki and Dimitriadis, Dimitrios and Han, Kyu J. and Watanabe, Shinji and Narayanan, Shrikanth},
+  date      = {2021},
+  title     = {A Review of Speaker Diarization: Recent Advances with Deep Learning},
+  doi       = {10.48550/ARXIV.2101.09624},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords  = {Audio and Speech Processing (eess.AS), Computation and Language (cs.CL), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
