--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -48,5 +48,8 @@ In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand v
 In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
 
 % TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
+In Hoofdstuk~\ref{ch:resultaten} wordt besproken welke stappen effectief ondernomen werden, waarom bepaalde keuzes gemaakt werden en wat het resultaat hiervan was.
+
+In Hoofdstuk~\ref{ch:bespreking} worden de resultaten verder besproken en worden hier conclusies uit getrokken.
 
 In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
